fix: image width on mobile

--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,6 +1,6 @@
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   // grid-auto-rows: auto;
   grid-auto-flow: dense;
   gap: 15px;
